--- a/index.html
+++ b/index.html
@@ -20,21 +20,15 @@
   <body>
     <header>
       <nav>
-        <a href="#">
-          <img
-            src="/images/logo.svg"
-            alt="Logo"
-            class="logo"
-            width="65"
-            height="40"
-          />
+        <a href="#" class="logo">
+          <img src="/images/logo.svg" alt="Logo" width="65" height="40" />
         </a>
         <ul class="navs">
-          <li><a href="#">Home</a></li>
-          <li><a href="#latest">Latest</a></li>
-          <li><a href="#popular">Popular</a></li>
-          <li><a href="#trending">Trending</a></li>
-          <li><a href="#categories">Categories</a></li>
+          <li><a href="#" class="nav-links">Home</a></li>
+          <li><a href="#latest" class="nav-links">Latest</a></li>
+          <li><a href="#popular" class="nav-links">Popular</a></li>
+          <li><a href="#trending" class="nav-links">Trending</a></li>
+          <li><a href="#categories" class="nav-links">Categories</a></li>
         </ul>
       </nav>
     </header>
@@ -81,6 +75,8 @@
               </p>
             </section>
 
+            <hr />
+
             <section class="latest-newsBox" id="latest2">
               <h3 class="latest-news-title">The Downsides of AI Artistry</h3>
               <p class="latest-news-info">
@@ -88,6 +84,8 @@
                 generation?
               </p>
             </section>
+
+            <hr />
 
             <section class="latest-newsBox" id="latest3">
               <h3 class="latest-news-title">Is VC Funding Drying Up?</h3>
