--- a/index.html
+++ b/index.html
@@ -15,144 +15,152 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <script defer src="/js/main.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="#" class="logo">
-          <img src="/images/logo.svg" alt="Logo" width="65" height="40" />
-        </a>
-        <ul class="navs">
-          <li><a href="#" class="nav-links">Home</a></li>
-          <li><a href="#latest" class="nav-links">Latest</a></li>
-          <li><a href="#popular" class="nav-links">Popular</a></li>
-          <li><a href="#trending" class="nav-links">Trending</a></li>
-          <li><a href="#categories" class="nav-links">Categories</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page">
+      <div class="overlay"></div>
+      <header>
+        <nav>
+          <a href="#" class="logo">
+            <img src="images/logo.svg" alt="Logo" width="65" height="40" />
+          </a>
+          <div class="menu-button"></div>
+          <ul class="navs">
+            <li><a href="#" class="nav-links">Home</a></li>
+            <li><a href="#latest" class="nav-links">Latest</a></li>
+            <li><a href="#popular" class="nav-links">Popular</a></li>
+            <li><a href="#trending" class="nav-links">Trending</a></li>
+            <li><a href="#categories" class="nav-links">Categories</a></li>
+          </ul>
+        </nav>
+      </header>
 
-    <main>
-      <article class="homepage">
-        <section class="home-news">
-          <picture class="home-newsImg"
-            ><img
-              src="/images/image-web-3-desktop.jpg"
-              alt="Puzzle"
-              width="1460"
-              height="600"
-              class="desktop-img"
-            />
-            <img
-              src="/images/image-web-3-mobile.jpg"
-              alt="Puzzle"
-              width="686"
-              height="600"
-              class="mobile-img hide"
-            />
-          </picture>
-          <section class="home-newsContent">
-            <h1 class="home-newsTitle">The Bright Future of Web 3.0?</h1>
-            <div class="info">
-              <p class="home-newsInfo">
-                We dive into the next evolution of the web that claims to put
-                the power of the platforms back into the hands of the people.
-                But is it really fulfilling its promise?
-              </p>
-              <a href="#" class="readMore">Read More</a>
-            </div>
-          </section>
-        </section>
-
-        <section class="latest-news" id="latest">
-          <h2 class="latest-title">Latest</h2>
-          <section class="latest-newsContent">
-            <section class="latest-newsBox" id="latest1">
-              <h3 class="latest-news-title">Hydrogen VS Electric Cars</h3>
-              <p class="latest-news-info">
-                Will hydrogen-fueled cars ever catch up to EVs?
-              </p>
-            </section>
-
-            <hr />
-
-            <section class="latest-newsBox" id="latest2">
-              <h3 class="latest-news-title">The Downsides of AI Artistry</h3>
-              <p class="latest-news-info">
-                What are the possible adverse effects of on-demand AI image
-                generation?
-              </p>
-            </section>
-
-            <hr />
-
-            <section class="latest-newsBox" id="latest3">
-              <h3 class="latest-news-title">Is VC Funding Drying Up?</h3>
-              <p class="latest-news-info">
-                Private funding by VC firms is down 50% YOY. We take a look at
-                what that means.
-              </p>
-            </section>
-          </section>
-        </section>
-
-        <section class="trending-news" id="trending">
-          <section class="trending-newsBox" id="trending1">
-            <picture class="trending-news-img">
+      <main>
+        <article class="homepage">
+          <section class="home-news">
+            <picture class="home-newsImg">
+              <source
+                media="(min-width: 850px)"
+                srcset="images/image-web-3-desktop.jpg"
+              />
               <img
-                src="/images/image-retro-pcs.jpg"
-                alt="Retro PCs"
-                width="200"
-                height="254"
+                src="images/image-web-3-mobile.jpg"
+                alt="Puzzle"
+                width="686"
+                height="600"
               />
             </picture>
-            <div class="trending-news-content">
-              <h2 class="trending-news-num">01</h2>
-              <h3 class="trending-news-title">Reviving Retro PCs</h3>
-              <p class="trending-news-info">
-                What happens when old PCs are given modern upgrades?
-              </p>
-            </div>
+            <section class="home-newsContent">
+              <h1 class="home-newsTitle">The Bright Future of Web 3.0?</h1>
+              <div class="info">
+                <p class="home-newsInfo">
+                  We dive into the next evolution of the web that claims to put
+                  the power of the platforms back into the hands of the people.
+                  But is it really fulfilling its promise?
+                </p>
+                <a href="#" class="readMore">Read More</a>
+              </div>
+            </section>
           </section>
 
-          <section class="trending-newsBox" id="trending2">
-            <picture class="trending-news-img">
-              <img
-                src="/images/image-top-laptops.jpg"
-                alt="Laptops"
-                width="200"
-                height="254"
-              />
-            </picture>
-            <div class="trending-news-content">
-              <h2 class="trending-news-num">02</h2>
-              <h3 class="trending-news-title">Top 10 Laptops of 2022</h3>
-              <p class="trending-news-info">
-                Our best picks for various needs and budgets.
-              </p>
-            </div>
+          <section class="latest-news" id="latest">
+            <h2 class="latest-title">Latest</h2>
+            <section class="latest-newsContent">
+              <section class="latest-newsBox" id="latest1">
+                <a href="#" class="latest-news-title"
+                  >Hydrogen VS Electric Cars</a
+                >
+                <p class="latest-news-info">
+                  Will hydrogen-fueled cars ever catch up to EVs?
+                </p>
+              </section>
+
+              <hr />
+
+              <section class="latest-newsBox" id="latest2">
+                <a href="#" class="latest-news-title"
+                  >The Downsides of AI Artistry</a
+                >
+                <p class="latest-news-info">
+                  What are the possible adverse effects of on-demand AI image
+                  generation?
+                </p>
+              </section>
+
+              <hr />
+
+              <section class="latest-newsBox" id="latest3">
+                <a href="#" class="latest-news-title"
+                  >Is VC Funding Drying Up?</a
+                >
+                <p class="latest-news-info">
+                  Private funding by VC firms is down 50% YOY. We take a look at
+                  what that means.
+                </p>
+              </section>
+            </section>
           </section>
 
-          <section class="trending-newsBox" id="trending3">
-            <picture class="trending-news-img">
-              <img
-                src="/images/image-gaming-growth.jpg"
-                alt="Gamming Controller"
-                width="200"
-                height="254"
-              />
-            </picture>
-            <div class="trending-news-content">
-              <h2 class="trending-news-num">03</h2>
-              <h3 class="trending-news-title">The Growth of Gaming</h3>
-              <p class="trending-news-info">
-                How the pandemic has sparked fresh opportunities.
-              </p>
-            </div>
+          <section class="trending-news" id="trending">
+            <section class="trending-newsBox" id="trending1">
+              <picture class="trending-news-img">
+                <img
+                  src="images/image-retro-pcs.jpg"
+                  alt="Retro PCs"
+                  width="200"
+                  height="254"
+                />
+              </picture>
+              <div class="trending-news-content">
+                <h2 class="trending-news-num">01</h2>
+                <a href="#" class="trending-news-title">Reviving Retro PCs</a>
+                <p class="trending-news-info">
+                  What happens when old PCs are given modern upgrades?
+                </p>
+              </div>
+            </section>
+
+            <section class="trending-newsBox" id="trending2">
+              <picture class="trending-news-img">
+                <img
+                  src="images/image-top-laptops.jpg"
+                  alt="Laptops"
+                  width="200"
+                  height="254"
+                />
+              </picture>
+              <div class="trending-news-content">
+                <h2 class="trending-news-num">02</h2>
+                <a href="#" class="trending-news-title"
+                  >Top 10 Laptops of 2022</a
+                >
+                <p class="trending-news-info">
+                  Our best picks for various needs and budgets.
+                </p>
+              </div>
+            </section>
+
+            <section class="trending-newsBox" id="trending3">
+              <picture class="trending-news-img">
+                <img
+                  src="images/image-gaming-growth.jpg"
+                  alt="Gaming Controller"
+                  width="200"
+                  height="254"
+                />
+              </picture>
+              <div class="trending-news-content">
+                <h2 class="trending-news-num">03</h2>
+                <a href="#" class="trending-news-title">The Growth of Gaming</a>
+                <p class="trending-news-info">
+                  How the pandemic has sparked fresh opportunities.
+                </p>
+              </div>
+            </section>
           </section>
-        </section>
-      </article>
-    </main>
+        </article>
+      </main>
+    </div>
   </body>
 </html>
